# cowsay-rs

./: Cargo.toml  README.md
src/: lib.rs  parse.rs
