[package]
name = "cowsay"
version = "0.1.0"
edition = "2021"
description = "Configurable speaking/thinking cow (and a bit more)"

[dependencies]
ariadne = "0.1.5"
atty = "0.2.14"
chumsky = "0.8.0"
clap = { version = "3.2.22", features = ["derive"] }
derive_builder = "0.11.2"
itertools = "0.10.5"
textwrap = "0.15.1"
